--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CLBS | Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="src/logo.png">
 </head>
 <body>
 
+<div class="row">
+    <div class="column">
+        <div class="container">
+            <img src="src/logo.png" class="logo" height="200" width="200">
+            <h1>CLBS:</h1>
+            <h2>A portfolio</h2>
+        </div>
+    </div>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+
+        </ul>
+    </nav>
+</div>
+<footer>
+    <br>
+    Contact
+    <a href="https://www.facebook.com/lawrence.sidoro">Facebook</a>
+    <a href="linkedin.com/in/cris-lawrence-sidoro-11b7ab214">LinkedIn</a>
+    <a href="src/SIDORO Cris Lawrence_Resume.pdf">Resume</a>
+
+
+
+</footer>
 </body>
 </html>
