--- a/index.html
+++ b/index.html
@@ -12,18 +12,31 @@
         <nav>
             <img src="src/logo.png" alt="logo" class="logo">
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">WORK</a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#cont">CONTACT</a></li>
             </ul>
         </nav>
-        <div class="content">
-            <h1>Kamusta! I am Cris <span>Lawrence</span></h1>
-            <p>I am a Frontend Intern at Code and Theory and
-                <br>This is my Portfolio website
-            </p>
-        <a href="#">DOWNLOAD RESUME</a>
+
+        <div id="home" class="content">
+            <h1>Kamusta! I'm Cris <span>Lawrence</span></h1>
+            <p>I am a Frontend Intern at Code and Theory and this is my Portfolio website</p>
+            <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
+        <div class="pics">
+            <img src="src/image1.png" class="me">
         </div>
+        </div>
+
+        <div id="work">
+        </div>
+
+        <div id="about">
+        </div>
+
+        <div id="cont">
+        </div>
+
 
     </div>
 
