--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
 
         <div id="home" class="content">
-            <h1>Kamusta! I'm Cris <span>Lawrence</span></h1>
+            <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
             <p>I am a Frontend Intern at Code and Theory and this is my Portfolio website</p>
             <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
         <div class="pics">
