--- a/about.html
+++ b/about.html
@@ -21,23 +21,16 @@
     </nav>
     <div id="home" class="content">
         <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
-        <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
+        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website<br>
+            <br>Anya ngay? I was born and raised on Tarlac City, Philippines
+            <br>My main expertise as of the moment are
+            <br>Visual Arts, Photo Manipulation and Video editing.
+        </p>
     </div>
     <div class="pics">
         <img src="src/image1.png" class="me">
 <!--        <img src="src/bg.png" class="bg">-->
     </div>
-
-    <div id="work" class="content">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
-    </div>
-
-    <div id="cont">
-    </div>
-    
-
 </div>
 </body>
 </html>
