html and css fix Added js for autoplay video uploaded some works(png and mp4)

--- a/about.html
+++ b/about.html
@@ -23,8 +23,9 @@
         <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
         <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website<br>
             <br>Anya ngay? I was born and raised on Tarlac City, Philippines
+            <br>As a Computer Science student, I developed a liking on Frontend Development.
             <br>My main expertise as of the moment are
-            <br>Visual Arts, Photo Manipulation and Video editing.
+            <br>Visual Arts, Photo Manipulation and Video editing,
         </p>
     </div>
     <div class="pics">
