--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CLBS | Portfolio</title>
     <link rel="icon" href="src/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="run.js">
 
 </head>
 <body>
@@ -25,13 +26,29 @@
         <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
     </div>
     <div class="pics">
-        <img src="src/image1.png" class="me">
+        <img src="src/image1.png" alt="me" class="me">
 <!--        <img src="src/bg.png" class="bg">-->
     </div>
 
     <div id="work" class="content">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
+        <h2>Project 1: <span>Chaterist</span></h2>
+        <p>This is a project from our subject Programming 3</p>
+        <img src="src/chaterist.png" alt="project1" class="p1">
+        <img src="src/chaterist1.png" alt="project1a" class="p1">
+        <br>
+        <h2>Project 2: <span>Covid Monitoring System</span></h2>
+        <p>This is a Prelim project from our subject Web Development</p>
+        <img src="src/covid.png" alt="project2" class="p2">
+        <br>
+        <h2>Project 3: <span>Kobetix</span></h2>
+        <p>This is a Midterm project from our subject Web Development tackling CMS</p>
+        <img src="src/kobetix.png" alt="project3" class="p3">
+        <br>
+        <h2>Project 4: <span>KBD Music</span></h2>
+        <p>This is a Finals project from our subject Web Development</p>
+        <video id="kbdm" width="1080" height="720" controls class="p4">
+            <source src="src/kbdmusic.mp4" type="video/mp4">
+        </video>
     </div>
 
     <div id="cont">
