html and css fix Added js for autoplay video uploaded some works(png and mp4)

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         <video id="kbdm" width="1080" height="720" controls class="p4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
-    </div>
+    </div><br><br>
 
     <div id="cont">
+        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
+        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
     </div>
     
 
