--- a/about.html
+++ b/about.html
@@ -20,17 +20,41 @@
         </ul>
     </nav>
     <div id="home" class="content">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website<br>
-            <br>Anya ngay? I was born and raised on Tarlac City, Philippines
+        <h1>Kamusta! I'm <span>Cris Lawrence</span><br>I am a Frontend Intern at<br><span> Code and Theory Manila</span>  and<br>this is my Portfolio website</h1>
+        <p>
+            Anya ngay? I was born and raised on Tarlac City, Philippines
             <br>As a Computer Science student, I developed a liking on Frontend Development.
-            <br>My main expertise as of the moment are
-            <br>Visual Arts, Photo Manipulation and Video editing,
         </p>
+        <br>
+        <div class="hobbies">
+            <h2>WHAT I LIKE</h2>
+            <br>
+            <ul>
+                <li>Sketching</li>
+                <li>Digital Arts</li>
+                <li>Photography & Filming</li>
+                <li>Video Editing</li>
+                <li>Singing & Composing</li>
+                <li>Playing Guitar</li>
+
+            </ul>
+            <br>
+            <h2>WHAT I'M LEARNING</h2>
+            <br>
+            <ul>
+                <li>Frontend Development</li>
+                <li></li>
+            </ul>
+            <br>
+            <h2>RECOGNITION</h2>
+            <br>
+            <ul>
+                <li></li>
+            </ul>
     </div>
-    <div class="pics">
-        <img src="src/image1.png" class="me">
-<!--        <img src="src/bg.png" class="bg">-->
+
+
+
     </div>
 </div>
 </body>
