--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 <!--        <img src="src/bg.png" class="bg">-->
     </div>
 
-    <div id="work" class="content">
+    <div id="work" class="content2">
         <h2>Project 1: <span>Chaterist</span></h2>
         <p>This is a project from our subject Programming 3</p>
-        <img src="src/chaterist.png" alt="project1" class="p1">
-        <img src="src/chaterist1.png" alt="project1a" class="p1">
+        <img src="src/chaterist.png" alt="project1" class="proj1">
+        <img src="src/chaterist1.png" alt="project1a" class="proj1">
         <br>
         <h2>Project 2: <span>Covid Monitoring System</span></h2>
         <p>This is a Prelim project from our subject Web Development</p>
-        <img src="src/covid.png" alt="project2" class="p2">
+        <img src="src/covid.png" alt="project2" class="proj2">
         <br>
         <h2>Project 3: <span>Kobetix</span></h2>
         <p>This is a Midterm project from our subject Web Development tackling CMS</p>
-        <img src="src/kobetix.png" alt="project3" class="p3">
+        <img src="src/kobetix.png" alt="project3" class="proj3">
         <br>
         <h2>Project 4: <span>KBD Music</span></h2>
         <p>This is a Finals project from our subject Web Development</p>
-        <video id="kbdm" width="1080" height="720" controls class="p4">
+        <video id="kbdm" width="1080" height="720" controls class="proj4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
     </div><br><br>
