--- a/about.html
+++ b/about.html
@@ -43,7 +43,9 @@
             <br>
             <ul>
                 <li>Frontend Development</li>
-                <li></li>
+                <li>Drums</li>
+                <li>Hyper Realistic Sketching</li>
+
             </ul>
             <br>
             <h2>RECOGNITION</h2>
