--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         <img src="src/image1.png" alt="me" class="me">
 <!--        <img src="src/bg.png" class="bg">-->
     </div>
-
-    <div id="work" class="content2">
+    <div class="line"></div>
+    <br>
+    <hr>
+<!--    <div id="work" class="content2">-->
+<!--        -->
+<!--    </div><br><br>-->
+    <div id="work">
         <h2>Project 1: <span>Chaterist</span></h2>
         <p>This is a project from our subject Programming 3</p>
         <img src="src/chaterist.png" alt="project1" class="proj1">
@@ -49,7 +54,8 @@
         <video id="kbdm" width="1080" height="720" controls class="proj4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
-    </div><br><br>
+        <hr>
+    </div>
 
     <div id="cont">
         <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
