changed div into section

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <div id="home" class="content">
+    <section id="home" class="content">
         <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
         <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
         <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
-    </div>
+    </section>
     <div class="pics">
         <img src="src/image1.png" alt="me" class="me">
 <!--        <img src="src/bg.png" class="bg">-->
@@ -35,7 +35,7 @@
 <!--    <div id="work" class="content2">-->
 <!--        -->
 <!--    </div><br><br>-->
-    <div id="work">
+    <section id="work">
         <h2>Project 1: <span>Chaterist</span></h2>
         <p>This is a project from our subject Programming 3</p>
         <img src="src/chaterist.png" alt="project1" class="proj1">
@@ -55,12 +55,12 @@
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
         <hr>
-    </div>
+    </section>
 
-    <div id="cont">
+    <section id="cont">
         <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
         <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
-    </div>
+    </section>
     
 
 </div>
