added some details

--- a/about.html
+++ b/about.html
@@ -22,11 +22,14 @@
     <div id="home" class="content">
         <h1>Kamusta! I'm <span>Cris Lawrence</span><br>I am a Frontend Intern at<br><span> Code and Theory Manila</span>  and<br>this is my Portfolio website</h1>
         <p>
-            Anya ngay? I was born and raised on Tarlac City, Philippines
+            Anya ngay? I was born and raised on Tarlac City, Philippines.
             <br>As a Computer Science student, I developed a liking on Frontend Development.
         </p>
         <br>
-        <div class="hobbies">
+        <div class="line"></div>
+        <br>
+        <hr>
+        <section class="hobbies">
             <h2>WHAT I LIKE</h2>
             <br>
             <ul>
@@ -51,12 +54,10 @@
             <h2>RECOGNITION</h2>
             <br>
             <ul>
-                <li></li>
+                <li>Student Coordinator of SAMCIS Chorale</li>
+                <li>Gawad SAMCIS award</li>
             </ul>
-    </div>
-
-
-
+        </section>
     </div>
 </div>
 </body>
