added some details in about.html

--- a/about.html
+++ b/about.html
@@ -33,12 +33,13 @@
             <h2>WHAT I LIKE</h2>
             <br>
             <ul>
-                <li>Sketching</li>
-                <li>Digital Arts</li>
-                <li>Photography & Filming</li>
-                <li>Video Editing</li>
-                <li>Singing & Composing</li>
-                <li>Playing Guitar</li>
+                <a href="src/portrait.jpg"><li>Sketching</li></a>
+                <a href="src/pm.jpg"><li>Digital Arts</li></a>
+                <a href="src/edit.jpg"><li>Photography & Filming</li></a>
+                <a href="src/tumbangpreso.mp4"><li>Video Editing</li></a>
+                <a href="src/yt.png"><li>Vlogging</li></a>
+                <a href="src/chorale.jpg"><li>Singing & Composing</li></a>
+                <a href="src/rivermaya.jpg"><li>Playing Guitar</li></a>
 
             </ul>
             <br>
@@ -46,15 +47,15 @@
             <br>
             <ul>
                 <li>Frontend Development</li>
-                <li>Drums</li>
-                <li>Hyper Realistic Sketching</li>
+                <a href="src/drums.jpg"><li>Drums</li></a>
+                <a href="src/portrait1.jpg"><li>Hyper Realistic Sketching</li></a>
 
             </ul>
             <br>
             <h2>RECOGNITION</h2>
             <br>
             <ul>
-                <li>Student Coordinator of SAMCIS Chorale</li>
+                <a href="src/recog.jpg"><li>Student Coordinator of SAMCIS Chorale</li></a>
                 <li>Gawad SAMCIS award</li>
             </ul>
         </section>
