added some details in index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
     </section>
 
     <section id="cont">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
+        <h1>How to<span> reach me?</span></h1>
+        <br>
+        <ul>
+            <a href="https://www.facebook.com/lawrence.sidoro/"><li>Facebook</li></a>
+            <a href="www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><li>LinkedIn</li></a>
+            <li>09776071373</li>
+            <li>crislawrencesidoro@gmail.com</li>
+
+        </ul>
     </section>
     
 
