--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="hero">
     <nav>
-        <img src="src/logo.png" class="logo">
+        <a href="index.html"><img src="src/logo.png" class="logo"></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="#work">WORK</a></li>
@@ -38,7 +38,7 @@
         <h2>Project 1: <span>Chaterist</span></h2>
         <p>This is a project from our subject Programming 3</p>
         <img src="src/chaterist.png" alt="project1" class="proj1">
-        <img src="src/chaterist1.png" alt="project1a" class="proj1">
+        <img src="src/chaterist1.png" alt="project1a" class="proj1a">
         <br>
         <h2>Project 2: <span>Covid Monitoring System</span></h2>
         <p>This is a Prelim project from our subject Web Development</p>
