--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 <div class="hero">
     <nav>
-        <img src="src/logo.png" class="logo">
+        <a href="index.html"><img src="src/logo.png" class="logo"></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="#work">WORK</a></li>
