--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
         <h2>How to<span> reach me?</span></h2>
         <br>
         <ul>
+            <li>Email Address: <span>crislawrencesidoro@gmail.com</span></li>
+            <li>Contact Number: <span>09776071373</span></li>
             <a href="https://www.facebook.com/lawrence.sidoro/"><li>Facebook</li></a>
-            <a href="www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><li>LinkedIn</li></a>
-            <li>09776071373</li>
-            <li>crislawrencesidoro@gmail.com</li>
-            <li></li>
-
+            <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><li>LinkedIn</li></a>
         </ul>
     </section>
     
