--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
     </section>
     <div class="pics">
-        <img src="src/image1.png" alt="me" class="me">
+        <img src="src/image1a.png" alt="me" class="me">
 <!--        <img src="src/bg.png" class="bg">-->
     </div>
     <br>
