--- a/index.html
+++ b/index.html
@@ -27,14 +27,10 @@
     </section>
     <div class="pics">
         <img src="src/image1a.png" alt="me" class="me">
-<!--        <img src="src/bg.png" class="bg">-->
     </div>
     <br>
     <hr>
 
-<!--    <div id="work" class="content2">-->
-<!--        -->
-<!--    </div><br><br>-->
     <section id="work">
         <h2>Project 1: <span>Chaterist</span></h2>
         <p>This is a project from our subject Programming 3</p>
@@ -58,7 +54,7 @@
     </section>
 
     <section id="cont">
-        <h2>How to<span> reach me?</span></h2>
+        <h2>Want to<span> reach me?</span></h2>
         <br>
         <ul>
             <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">Email Address</a>
@@ -67,8 +63,6 @@
             <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214">LinkedIn</a>
         </ul>
     </section>
-    
-
 </div>
 </body>
 </html>
