--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 <!--</html>-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -103,7 +103,7 @@
     <br>
     <hr>
     <section id="likes">
-        <h2>WHAT I LIKE</h2>
+        <h2>WHAT I <span>LIKE</span></h2>
         <br>
         <ul>
             <a href="src/portrait.jpg"><li>Sketching</li></a>
@@ -115,12 +115,10 @@
             <a href="src/rivermaya.jpg"><li>Playing Guitar</li></a>
         </ul>
         <br>
-
-        <hr>
     </section>
 
     <section id="lrn">
-        <h2>WHAT I'M LEARNING</h2>
+        <h2>WHAT I'M <span>LEARNING</span></h2>
         <br>
         <ul>
             <li>Frontend Development</li>
@@ -131,13 +129,12 @@
     </section>
 
     <section id="recog">
-        <h2>RECOGNITION</h2>
+        <h2>MY <span>RECOGNITIONS</span></h2>
         <br>
         <ul>
             <a href="src/recog.jpg"><li>Student Coordinator of SAMCIS Chorale</li></a>
             <li>Gawad SAMCIS award</li>
         </ul>
-
     </section>
 </div>
 </body>
