font combination experiment

--- a/index.html
+++ b/index.html
@@ -33,20 +33,24 @@
 
     <section id="work">
         <h2>Project 1: <span>Chaterist</span></h2>
-        <p>This is a project from our subject Programming 3</p>
+        <p>This is a project from our subject Programming 3<br> using java and a virtual machine that can run the program from Windows and Linux
+        </p>
         <img src="src/chaterist.png" alt="project1" class="proj1">
         <img src="src/chaterist1.png" alt="project1a" class="proj1a">
         <br>
         <h2>Project 2: <span>Covid Monitoring System</span></h2>
-        <p>This is a Prelim project from our subject Web Development</p>
+        <p>This is a Prelim project from our subject Web Development<br> we are tasked to do a static monitoring system that allows the user <br>to check Covid Infos.
+        </p>
         <img src="src/covid.png" alt="project2" class="proj2">
         <br>
         <h2>Project 3: <span>Kobetix</span></h2>
-        <p>This is a Midterm project from our subject Web Development tackling CMS</p>
+        <p>This is a Midterm project from our subject Web Development tackling CMS<br> we are tasked to do a ticketing system using wordpress
+        </p>
         <img src="src/kobetix.png" alt="project3" class="proj3">
         <br>
         <h2>Project 4: <span>KBD Music</span></h2>
-        <p>This is a Finals project from our subject Web Development</p>
+        <p>This is a Finals project from our subject Web Development
+        </p>
         <video id="kbdm" width="1080" height="720" controls class="proj4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
@@ -59,7 +63,7 @@
         <br>
         <ul>
             <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">Email Address</a>
-            <a href="">Contact Number: <span>09776071373</span></a>
+            <a>Contact Number: 09776071373</a>
             <a href="https://www.facebook.com/lawrence.sidoro/">Facebook</a>
             <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214">LinkedIn</a>
         </ul>
