vh adjustment and description adding on projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         <img src="src/kobetix.png" alt="project3" class="proj3">
         <br>
         <h2>Project 4: <span>KBD Music</span></h2>
-        <p>This is a Finals project from our subject Web Development
+        <p>This is a Finals project from our subject Web Development, we are tasked use
+            <br>server-side scripting technologies to give a web application server-side capabilities
+            <br>to combine front-end and back-end web development techniques while creating a web application.
+
         </p>
         <video id="kbdm" width="1080" height="720" controls class="proj4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
