--- a/about.html
+++ b/about.html
@@ -1,74 +1,5 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-<!--    <title>CLBS | Portfolio</title>-->
-<!--    <link rel="icon" href="src/logo.png">-->
-<!--    <link rel="stylesheet" href="style.css">-->
-
-<!--</head>-->
-<!--<body>-->
-<!--<div class="hero">-->
-<!--    <nav>-->
-<!--        <a href="index.html"><img src="src/logo.png" class="logo"></a>-->
-<!--        <ul>-->
-<!--            <li><a href="index.html">HOME</a></li>-->
-<!--            <li><a href="#work">WORK</a></li>-->
-<!--            <li><a href="#cont">CONTACT</a></li>-->
-<!--            <li><a href="about.html">ABOUT</a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-<!--    <div id="home" class="content">-->
-<!--        <h1>Kamusta! I'm <span>Cris Lawrence</span><br>I am a Frontend Intern at<br><span> Code and Theory Manila</span>  and<br>this is my Portfolio website</h1>-->
-<!--        <p>-->
-<!--            Anya ngay? I was born and raised on Tarlac City, Philippines.-->
-<!--            <br>As a Computer Science student, I developed a liking on Frontend Development.-->
-<!--        </p>-->
-<!--        <br>-->
-<!--        <hr>-->
-<!--        <section class="hobbies">-->
-<!--            <h2>WHAT I LIKE</h2>-->
-<!--            <br>-->
-<!--            <ul>-->
-<!--                <a href="src/portrait.jpg"><li>Sketching</li></a>-->
-<!--                <a href="src/pm.jpg"><li>Digital Arts</li></a>-->
-<!--                <a href="src/edit.jpg"><li>Photography & Filming</li></a>-->
-<!--                <a href="src/tumbangpreso.mp4"><li>Video Editing</li></a>-->
-<!--                <a href="src/yt.png"><li>Vlogging</li></a>-->
-<!--                <a href="src/chorale.jpg"><li>Singing & Composing</li></a>-->
-<!--                <a href="src/rivermaya.jpg"><li>Playing Guitar</li></a>-->
-
-<!--            </ul>-->
-<!--            <br>-->
-<!--            <h2>WHAT I'M LEARNING</h2>-->
-<!--            <br>-->
-<!--            <ul>-->
-<!--                <li>Frontend Development</li>-->
-<!--                <a href="src/drums.jpg"><li>Drums</li></a>-->
-<!--                <a href="src/portrait1.jpg"><li>Hyper Realistic Sketching</li></a>-->
-
-<!--            </ul>-->
-<!--            <br>-->
-<!--            <h2>RECOGNITION</h2>-->
-<!--            <br>-->
-<!--            <ul>-->
-<!--                <a href="src/recog.jpg"><li>Student Coordinator of SAMCIS Chorale</li></a>-->
-<!--                <li>Gawad SAMCIS award</li>-->
-<!--            </ul>-->
-<!--        </section>-->
-<!--        <div class="pics">-->
-<!--            <img src="src/image1a.png" alt="me" class="me">-->
-<!--            &lt;!&ndash;        <img src="src/bg.png" class="bg">&ndash;&gt;-->
-<!--        </div>-->
-<!--        <br>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
