Add chateristdesc.html, coviddesc.html, kbdmusic.html, kobetixdesc.html
Update index.html, about.html and style.css

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CLBS | Portfolio</title>
+    <title>CLBS | About</title>
     <link rel="icon" href="src/logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="script" href="run.js">
@@ -11,62 +11,56 @@
 </head>
 <body>
 <div class="hero">
-    <nav>
+    <nav class="navbar">
         <a href="index.html"><img src="src/logo.png" class="logo"></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="#likes">LIKES</a></li>
-            <li><a href="#lrn">LEARNING</a></li>
-            <li><a href="#recog">RECOGNITIONS</a></li>
+            <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
+            <li><a href="#work">WORK</a></li>
+            <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <section id="home" class="content">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span><br>I am a Frontend Intern at<br><span> Code and Theory Manila</span>  and<br>this is my Portfolio website</h1>
-        <p>
-            Anya ngay? I was born and raised on Tarlac City, Philippines.
-            <br>As a Computer Science student, I developed a liking on Frontend Development.
+    <section id="about" class="content1">
+        <h1>Who is Cris Lawrence?</h1>
+        <p class="abt">
+            Kamusta! My name is Cris Lawrence Bautista Sidoro.<br>A student of
+            <a href="https://en.wikipedia.org/wiki/Saint_Louis_University_(Philippines)">SLU Baguio</a>
+            taking a course of Bachelor of Science in Computer Science.<br><br>
+            Despite being born in Tarlac City, I was raised in San Mateo, Rizal,
+            <br>where both of my parents work—my mother as a teacher and my father as an engineer.<br><br>
+            When I was little, I developed an interest for both technology and art.<br>
+            I used to draw cartoons and spend hours tinkering with wires in my father's toolbox.<br>
+            As the years went by, I refined these abilities and had the opportunity to use them<br>
+            to earn a living. Additionally, because I'm an artist, I also fell in love with music,<br>
+            especially singing and playing the guitar. Finally, I also engage in photography and filmmaking.<br>
+            Besides from arts, I’m also playing basketball and badminton.<br><br>
+            Why did I choose this path? I actually didn't want to take this course because I was more<br>
+            interested in filmmaking or architecture. My first experience with front-end development was<br>
+            in the eleventh grade, when we were given the assignment to create a
+            <a href="https://orodis.wordpress.com/">website</a> using WordPress.<br>
+            Four years later, when I started my third year and focused on software engineering, everything changed.<br>
+            Who would have guessed that you could create art with code.<br><br>
+            I'm currently in my final year of college and serving as president of the<br>
+            <a href="https://www.facebook.com/samcischorale">SAMCIS Chorale</a>, the campus choir. As of now I am a Frontend Developer Intern at<br>
+            <a href="https://www.codeandtheory.com/location/manila">CODE AND THEORY MANILA</a>.<br><br>
+            Don’t hesitate to reach out, let’s collaborate!
         </p>
         <br>
     </section>
-    <div class="pics">
-        <img src="src/image1a.png" alt="me" class="me">
+    <div class="pics1">
+        <img src="src/image1.png" alt="me" class="me">
     </div>
     <br>
-    <hr>
-    <section id="likes">
-        <h2>WHAT I <span>LIKE</span></h2>
-        <br>
-        <ul>
-            <a href="src/portrait.jpg"><li>Sketching</li></a>
-            <a href="src/pm.jpg"><li>Digital Arts</li></a>
-            <a href="src/edit.jpg"><li>Photography & Filming</li></a>
-            <a href="src/tumbangpreso.mp4"><li>Video Editing</li></a>
-            <a href="src/yt.png"><li>Vlogging</li></a>
-            <a href="src/chorale.jpg"><li>Singing & Composing</li></a>
-            <a href="src/rivermaya.jpg"><li>Playing Guitar</li></a>
-        </ul>
-        <br>
-    </section>
 
-    <section id="lrn">
-        <h2>WHAT I'M <span>LEARNING</span></h2>
+    <footer>
+        <h3>Let's get in touch!</h3>
         <br>
         <ul>
-            <li>Frontend Development</li>
-            <a href="src/drums.jpg"><li>Drums</li></a>
-            <a href="src/portrait1.jpg"><li>Hyper Realistic Sketching</li></a>
+            <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">crislawrencesidoro@gmail.com</a>
+            <a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a>
+            <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a>
         </ul>
-        <br>
-    </section>
-
-    <section id="recog">
-        <h2>MY <span>RECOGNITIONS</span></h2>
-        <br>
-        <ul>
-            <a href="src/recog.jpg"><li>Student Coordinator of SAMCIS Chorale</li></a>
-            <li>Gawad SAMCIS award</li>
-        </ul>
-    </section>
+    </footer>
 
 </div>
 </body>
