--- a/index.html
+++ b/index.html
@@ -11,66 +11,62 @@
 </head>
 <body>
 <div class="hero">
-    <nav>
+    <nav class="navbar">
         <a href="index.html"><img src="src/logo.png" class="logo"></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
+            <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
             <li><a href="#work">WORK</a></li>
-            <li><a href="#cont">CONTACT</a></li>
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
     <section id="home" class="content">
-        <h1>Kamusta! I'm <span>Cris Lawrence</span></h1>
+        <h1>Kamusta! I'm Cris Lawrence</h1>
         <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
-        <a href="src/SIDORO Cris Lawrence_Resume.pdf">VIEW RESUME</a>
     </section>
     <div class="pics">
         <img src="src/image1a.png" alt="me" class="me">
     </div>
     <br>
-    <hr>
 
     <section id="work">
-        <h2>Project 1: <span>Chaterist</span></h2>
+        <h2>Project 1:Chaterist</h2>
         <p>This is a project from our subject Programming 3<br> using java and a virtual machine that can run the program from Windows and Linux
         </p>
         <img src="src/chaterist.png" alt="project1" class="proj1">
-        <img src="src/chaterist1.png" alt="project1a" class="proj1a">
+        <a href="chateristdesc.html">VIEW PROJECT</a>
         <br>
-        <h2>Project 2: <span>Covid Monitoring System</span></h2>
+        <h2>Project 2:Covid Monitoring System</h2>
         <p>This is a Prelim project from our subject Web Development<br> we are tasked to do a static monitoring system that allows the user <br>to check Covid Infos.
         </p>
         <img src="src/covid.png" alt="project2" class="proj2">
+        <a href="coviddesc.html">VIEW PROJECT</a>
         <br>
-        <h2>Project 3: <span>Kobetix</span></h2>
+        <h2>Project 3:Kobetix</h2>
         <p>This is a Midterm project from our subject Web Development tackling CMS<br> we are tasked to do a ticketing system using wordpress
         </p>
         <img src="src/kobetix.png" alt="project3" class="proj3">
+        <a href="kobetixdesc.html">VIEW PROJECT</a>
         <br>
-        <h2>Project 4: <span>KBD Music</span></h2>
+        <h2>Project 4:KBD Music</h2>
         <p>This is a Finals project from our subject Web Development, we are tasked use
             <br>server-side scripting technologies to give a web application server-side capabilities
             <br>to combine front-end and back-end web development techniques while creating a web application.
-
         </p>
         <video id="kbdm" width="1080" height="720" controls class="proj4">
             <source src="src/kbdmusic.mp4" type="video/mp4">
         </video>
-        <hr>
+        <a href="kbdmscdesc.html">VIEW PROJECT</a>
     </section>
-
-
-    <section id="cont">
-        <h2>Want to<span> reach me?</span></h2>
-        <br>
-        <ul>
-            <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">Email Address</a>
-            <a>Contact Number: 09776071373</a>
-            <a href="https://www.facebook.com/lawrence.sidoro/">Facebook</a>
-            <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214">LinkedIn</a>
-        </ul>
-    </section>
+<footer>
+    <h3>Let's get in touch!</h3>
+    <br>
+    <ul>
+        <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">crislawrencesidoro@gmail.com</a>
+        <a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a>
+        <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a>
+    </ul>
+</footer>
 
 </div>
 </body>
