--- a/about.html
+++ b/about.html
@@ -13,12 +13,15 @@
 <div class="hero">
     <nav class="navbar">
         <a href="index.html"><img src="src/logo.png" class="logo"></a>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
-            <li><a href="#work">WORK</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-        </ul>
+        <nav>
+            <ul id="menuList">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
+        </nav>
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">
     </nav>
     <section id="about" class="content1">
         <h1>Who is Cris Lawrence?</h1>
@@ -53,14 +56,20 @@
     <br>
 
     <footer>
-        <h3>Let's get in touch!</h3>
-        <br>
-        <ul>
-            <a href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html'">crislawrencesidoro@gmail.com</a>
-            <a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a>
-            <a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a>
-        </ul>
+        <div class="foot">
+            <h4>Let's get in touch!</h4>
+            <nav class="navbar-foot">
+                <ul>
+                    <li><a class="email" href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html' ">crislawrencesidoro@gmail.com</a></li>
+                    <li><a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a></li>
+                </ul>
+            </nav>
+
+            <br>
+        </div>
     </footer>
+
 
 </div>
 </body>
