--- a/chateristdesc.html
+++ b/chateristdesc.html
@@ -12,13 +12,51 @@
 <div class="hero">
     <nav class="navbar">
         <a href="index.html"><img src="src/logo.png" class="logo"></a>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
-            <li><a href="#work">WORK</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-        </ul>
+        <nav>
+            <ul id="menuList">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
+        </nav>
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">
     </nav>
+
+
+    <section id="chaterist">
+        <h2>Chaterist</h2>
+        <ul class="desc">
+            <li>Project Description
+            <p>This is a project from our subject Programming 3<br> using java and a virtual machine that can run the program from Windows and Linux</p>
+            </li>
+            <li>Role
+            <p>Developer</p>
+            </li>
+            <li>Time Span
+            <p>August - September 2021</p>
+            </li>
+        </ul>
+        </p>
+        <img src="src/chaterist.png" alt="project1" class="proj1">
+
+
+    </section>
+
+    <footer>
+        <div class="foot">
+            <h4>Let's get in touch!</h4>
+            <nav class="navbar-foot">
+                <ul>
+                    <li><a class="email" href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html' ">crislawrencesidoro@gmail.com</a></li>
+                    <li><a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a></li>
+                </ul>
+            </nav>
+
+            <br>
+        </div>
+    </footer>
 
 </div>
 </body>
