--- a/kbdmscdesc.html
+++ b/kbdmscdesc.html
@@ -12,13 +12,53 @@
 <div class="hero">
     <nav class="navbar">
         <a href="index.html"><img src="src/logo.png" class="logo"></a>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
-            <li><a href="#work">WORK</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-        </ul>
+        <nav>
+            <ul id="menuList">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="src/SIDORO Cris Lawrence_Resume.pdf">RESUME</a></li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
+        </nav>
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">
     </nav>
+
+    <section id="kbd">
+        <h2>KBD Music</h2>
+        <ul class="desc">
+            <li>Project Description
+                <p>This is a Finals project from our subject Web Development, we are tasked use
+                    <br>server-side scripting technologies to give a web application server-side capabilities
+                    <br>to combine front-end and back-end web development techniques while creating a web application.
+                </p>
+            </li>
+            <li>Role
+                <p>Developer</p>
+            </li>
+            <li>Time Span
+                <p>November - December 2021</p>
+            </li>
+        </ul>
+        <video id="kbdm" width="1080" height="720" controls class="proj4">
+            <source src="src/kbdmusic.mp4" type="video/mp4">
+        </video>
+    </section>
+
+    <footer>
+        <div class="foot">
+            <h4>Let's get in touch!</h4>
+            <nav class="navbar-foot">
+                <ul>
+                    <li><a class="email" href="mailto:crislawrencesidoro@gmail.com" onclick="window.location.href='np.html' ">crislawrencesidoro@gmail.com</a></li>
+                    <li><a href="https://www.facebook.com/lawrence.sidoro/"><img src="src/fb.png" alt="fb icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/cris-lawrence-sidoro-11b7ab214"><img src="src/linkedin.png" alt="LinkedIn icon"></a></li>
+                </ul>
+            </nav>
+
+            <br>
+        </div>
+    </footer>
+
 
 </div>
 </body>
