--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <img src="src\menu.png" class="menu" onclick="togglemenu()">
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">//onclick
     </nav>
     <section id="home" class="content">
         <h1>Kamusta! I'm Cris Lawrence</h1>
