--- a/kobetixdesc.html
+++ b/kobetixdesc.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <img src="src\menu.png" class="menu" onclick="togglemenu()">
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">//onclick
     </nav>
 
     <section id="kobetix">
