--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <img src="src\menu.png" class="menu" onclick="togglemenu()">//onclick
+        <img src="src\menu.png" class="menu" onclick="togglemenu()">
     </nav>
     <section id="about" class="content1">
         <h1>Who is Cris Lawrence?</h1>
