--- a/coviddesc.html
+++ b/coviddesc.html
@@ -20,7 +20,7 @@
         <li><a href="about.html">ABOUT</a></li>
       </ul>
     </nav>
-    <img src="src\menu.png" class="menu" onclick="togglemenu()">//onclick
+    <img src="src\menu.png" class="menu" onclick="togglemenu()">
   </nav>
 
   <section id="covid">
