--- a/kobetixdesc.html
+++ b/kobetixdesc.html
@@ -56,5 +56,18 @@
     </footer>
 
 </div>
+<script>
+    //for responsive site setting
+    var menuList = document.getElementById("menuList");
+    menuList.style.maxHeight = "0px";
+    function togglemenu(){
+        if (menuList.style.maxHeight == "0px"){
+            menuList.style.maxHeight = "130px"
+        }else {
+            menuList.style.maxHeight = "0px"
+        }
+    }
+
+</script>
 </body>
 </html>
