--- a/about.html
+++ b/about.html
@@ -73,5 +73,18 @@
 
 
 </div>
+<script>
+    //for responsive site setting
+    var menuList = document.getElementById("menuList");
+    menuList.style.maxHeight = "0px";
+    function togglemenu(){
+        if (menuList.style.maxHeight == "0px"){
+            menuList.style.maxHeight = "130px"
+        }else {
+            menuList.style.maxHeight = "0px"
+        }
+    }
+
+</script>
 </body>
 </html>
