--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>CLBS | Portfolio</title>
     <link rel="icon" href="src/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="script" href="run.js">
 
 </head>
