--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <section id="home" class="content">
         <h1>Kamusta! I'm Cris Lawrence</h1>
-        <p>I am a Frontend Intern at Code and Theory Manila and this is my Portfolio website</p>
+        <p> Frontend Developer | Musician | Artist <br>and this is my Portfolio website.</p>
     </section>
     <div class="pics">
         <img src="src/image1a.png" alt="me" class="me">
